# SLC-Early-Access-Portal

./: SLC_GETTING_STARTED.md  requirement.md  research.md
.tmp_imgs/: diag.js  diag2.js  docs_mobile.js  docs_shot.js  email_access.html  email_preview.html  email_verify.html  scrollshot.js  scrollshot2.js  scrollshot3.js  shot_fw.js  shot_sections.js  verify.js  verify2.js
backend/: .env.example  .gitignore  README.md  main.py  migrate.py  pyproject.toml  reset_admin.py  smoke_test.py
backend/api/: index.py
backend/app/: constants.py
backend/app/core/: config.py  database.py  security.py  urls.py
backend/app/dependencies/: admin.py  auth.py
backend/app/models/: access_request.py  download.py  download_token.py  key.py  review.py  user.py
backend/app/routers/: access_request.py  admin.py  auth.py  dashboard.py  download.py  redeem.py  review.py  terms.py
backend/app/schemas/: auth.py  dashboard.py  review.py
backend/app/services/: access_request_service.py  auth_service.py  download_service.py  email_service.py  key_service.py  review_service.py  terms_service.py  token_service.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
frontend/components/: AccessKeyCard.tsx  AccessRequestSection.tsx  AdminDashboard.tsx  DownloadSection.tsx  DownloadWarningDialog.tsx  EmailVerificationBanner.tsx  ForgotPasswordForm.tsx  LoginForm.tsx  ProfileHeader.tsx  RegisterForm.tsx  folder.tsx  (+6 more)
spec/: CONSTRAINTS.md  CONTEXT.md  MEMORY.md  SECURITY.md  SPEC.md
(+100 files in other folders)
